feat: hidden command arguments feat: command tab completion filter